# MultiModal-AI-Application

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: embeddings.py  retriever.py  transcript.py
app/models/: schemas.py
app/services/: cache.py
static/: app.js  index.html  style.css
