[project]
name = "multimodal-ai-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.136.1",
    "google-genai>=1.75.0",
    "langchain>=1.3.1",
    "langchain-huggingface>=1.2.2",
    "langchain-redis>=0.2.5",
    "openai-whisper>=20250625",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
    "uvicorn>=0.47.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]
